--- a/app/sass/components/_component-template.scss
+++ b/app/sass/components/_component-template.scss
@@ -2,8 +2,14 @@
 	COMPONENT TEMPLATE
 \*------------------------------------*/
 
-.component { }
+.component {
+	width: 100%;
+}
 
-.component__element { }
+.component__element {
+	width: 100%;
+}
 
-.component__element--modifier { }
+.component__element--modifier {
+	width: 100%;
+}
