--- a/app/sass/layout/_forms.scss
+++ b/app/sass/layout/_forms.scss
@@ -61,7 +61,7 @@ label,
 legend {
 	font-size: $font__size--xs;
 	display: block;
-	margin-bottom: 0.5em;
+	margin-bottom: .5em;
 	font-weight: 600;
 }
 
