--- a/app/sass/main.scss
+++ b/app/sass/main.scss
@@ -29,7 +29,7 @@
 @import "layout/styleguide";
 @import "layout/print";
 
-@import "base/testing"
+@import "base/testing";
 
 // Components
 //@import "components/your-component-name";
