--- a/app/sass/base/_animations.scss
+++ b/app/sass/base/_animations.scss
@@ -3,12 +3,20 @@
 \*------------------------------------*/
 
 @keyframes fadein {
-	0% { opacity: 0; }
-	70% { opacity: 0.9; }
-	100% { opacity: 1; }
+	0% {
+		opacity: 0;
+	}
+	
+	70% {
+		opacity: .9;
+	}
+	
+	100% {
+		opacity: 1;
+	}
 }
 
-$transitionInFast: 0.1s;
-$transitionOutFast: 0.2s;
-$transitionInSlow: 0.5s;
-$transitionOutSlow: 1.0s;
+$transitionInFast: .1s;
+$transitionOutFast: .2s;
+$transitionInSlow: .5s;
+$transitionOutSlow: 1s;
