--- a/app/sass/base/_fonts.scss
+++ b/app/sass/base/_fonts.scss
@@ -11,7 +11,7 @@ $font__weight--header: $font__weight--bold;
 $font__size--base: 1rem;
 $font__lineheight--base: 1.6;
 $font__family--base: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif; /* Thanks to https://www.smashingmagazine.com/2015/11/using-system-ui-fonts-practical-guide/ */
-$font__family--fixed: 'Inconsolata', monospace;
+$font__family--fixed: "Inconsolata", monospace;
 $font__lineheight--fixed: $base-line-height;
 
 $font__size--xxl: 4em;
@@ -19,8 +19,8 @@ $font__size--xl: 2.8em;
 $font__size--l: 2.1em;
 $font__size--m: 1.35em;
 $font__size--s: 1em;
-$font__size--xs: 0.8em;
-$font__size--xxs: 0.65em;
+$font__size--xs: .8em;
+$font__size--xxs: .65em;
 
 $font__lineheight--xxl: 1.8;
 $font__lineheight--xl: 1.8;
@@ -31,15 +31,15 @@ $font__lineheight--xs: 1.45;
 $font__lineheight--xxs: 1.3;
 
 $breakpoints: (
-  small : $size-mobile-portrait,
-  medium: $size-tablet,
-  large : $size-desktop
+	small : $size-mobile-portrait,
+	medium: $size-tablet,
+	large : $size-desktop
 );
 
 $global-font-size: (
 	null: ($font__size--base, $font__lineheight--base),
-	small: ($font__size--base * 0.75, $font__lineheight--base * 0.95),
-	medium: ($font__size--base * 0.85, $font__lineheight--base * 0.95),
+	small: ($font__size--base * .75, $font__lineheight--base * .95),
+	medium: ($font__size--base * .85, $font__lineheight--base * .95),
 	large: ($font__size--base, $font__lineheight--base)
 	//1440px: 20px,
 );
