--- a/app/sass/base/_reset.scss
+++ b/app/sass/base/_reset.scss
@@ -11,10 +11,10 @@
  */
 
 html {
-  font-family: sans-serif; /* 1 */
-  line-height: 1.15; /* 2 */
-  -ms-text-size-adjust: 100%; /* 3 */
-  -webkit-text-size-adjust: 100%; /* 3 */
+	font-family: sans-serif; /* 1 */
+	line-height: 1.15; /* 2 */
+	-ms-text-size-adjust: 100%; /* 3 */
+	-webkit-text-size-adjust: 100%; /* 3 */
 }
 
 /**
@@ -22,11 +22,11 @@ html {
  */
 
 body {
-  margin: 0;
+	margin: 0;
 }
 
 /* HTML5 display definitions
-   ========================================================================== */
+	 ========================================================================== */
 
 /**
  * Add the correct display in IE 9-.
@@ -46,7 +46,7 @@ menu,
 nav,
 section,
 summary { /* 1 */
-  display: block;
+	display: block;
 }
 
 /**
@@ -57,7 +57,7 @@ audio,
 canvas,
 progress,
 video {
-  display: inline-block;
+	display: inline-block;
 }
 
 /**
@@ -65,8 +65,8 @@ video {
  */
 
 audio:not([controls]) {
-  display: none;
-  height: 0;
+	display: none;
+	height: 0;
 }
 
 /**
@@ -74,7 +74,7 @@ audio:not([controls]) {
  */
 
 progress {
-  vertical-align: baseline;
+	vertical-align: baseline;
 }
 
 /**
@@ -84,11 +84,11 @@ progress {
 
 template, /* 1 */
 [hidden] {
-  display: none;
+	display: none;
 }
 
 /* Links
-   ========================================================================== */
+	 ========================================================================== */
 
 /**
  * 1. Remove the gray background on active links in IE 10.
@@ -96,8 +96,8 @@ template, /* 1 */
  */
 
 a {
-  background-color: transparent; /* 1 */
-  -webkit-text-decoration-skip: objects; /* 2 */
+	background-color: transparent; /* 1 */
+	-webkit-text-decoration-skip: objects; /* 2 */
 }
 
 /**
@@ -107,11 +107,11 @@ a {
 
 a:active,
 a:hover {
-  outline-width: 0;
+	outline-width: 0;
 }
 
 /* Text-level semantics
-   ========================================================================== */
+	 ========================================================================== */
 
 /**
  * 1. Remove the bottom border in Firefox 39-.
@@ -119,9 +119,8 @@ a:hover {
  */
 
 abbr[title] {
-  border-bottom: none; /* 1 */
-  text-decoration: underline; /* 2 */
-  text-decoration: underline dotted; /* 2 */
+	border-bottom: none; /* 1 */
+	text-decoration: underline; /* 2 */
 }
 
 /**
@@ -130,24 +129,24 @@ abbr[title] {
 
 b,
 strong {
-  font-weight: inherit;
+	font-weight: inherit;
 }
 
 /**
  * Add the correct font weight in Chrome, Edge, and Safari.
  */
-
+/*
 b,
 strong {
-  font-weight: bolder;
+	font-weight: bolder;
 }
-
+*/
 /**
  * Add the correct font style in Android 4.3-.
  */
 
 dfn {
-  font-style: italic;
+	font-style: italic;
 }
 
 /**
@@ -156,8 +155,8 @@ dfn {
  */
 
 h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
+	font-size: 2em;
+	margin: .67em 0;
 }
 
 /**
@@ -165,8 +164,8 @@ h1 {
  */
 
 mark {
-  background-color: #ff0;
-  color: #000;
+	background-color: #ff0;
+	color: #000;
 }
 
 /**
@@ -174,7 +173,7 @@ mark {
  */
 
 small {
-  font-size: 80%;
+	font-size: 80%;
 }
 
 /**
@@ -184,29 +183,29 @@ small {
 
 sub,
 sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
+	font-size: 75%;
+	line-height: 0;
+	position: relative;
+	vertical-align: baseline;
 }
 
 sub {
-  bottom: -0.25em;
+	bottom: -.25em;
 }
 
 sup {
-  top: -0.5em;
+	top: -.5em;
 }
 
 /* Embedded content
-   ========================================================================== */
+	 ========================================================================== */
 
 /**
  * Remove the border on images inside links in IE 10-.
  */
 
 img {
-  border-style: none;
+	border-style: none;
 }
 
 /**
@@ -214,11 +213,11 @@ img {
  */
 
 svg:not(:root) {
-  overflow: hidden;
+	overflow: hidden;
 }
 
 /* Grouping content
-   ========================================================================== */
+	 ========================================================================== */
 
 /**
  * 1. Correct the inheritance and scaling of font size in all browsers.
@@ -229,8 +228,8 @@ code,
 kbd,
 pre,
 samp {
-  font-family: monospace, monospace; /* 1 */
-  font-size: 1em; /* 2 */
+	font-family: monospace, monospace; /* 1 */
+	font-size: 1em; /* 2 */
 }
 
 /**
@@ -238,7 +237,7 @@ samp {
  */
 
 figure {
-  margin: 1em 40px;
+	margin: 1em 40px;
 }
 
 /**
@@ -247,13 +246,13 @@ figure {
  */
 
 hr {
-  box-sizing: content-box; /* 1 */
-  height: 0; /* 1 */
-  overflow: visible; /* 2 */
+	box-sizing: content-box; /* 1 */
+	height: 0; /* 1 */
+	overflow: visible; /* 2 */
 }
 
 /* Forms
-   ========================================================================== */
+	 ========================================================================== */
 
 /**
  * 1. Change font properties to `inherit` in all browsers (opinionated).
@@ -265,8 +264,8 @@ input,
 optgroup,
 select,
 textarea {
-  font: inherit; /* 1 */
-  margin: 0; /* 2 */
+	font: inherit; /* 1 */
+	margin: 0; /* 2 */
 }
 
 /**
@@ -274,7 +273,7 @@ textarea {
  */
 
 optgroup {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 /**
@@ -284,7 +283,7 @@ optgroup {
 
 button,
 input { /* 1 */
-  overflow: visible;
+	overflow: visible;
 }
 
 /**
@@ -294,12 +293,12 @@ input { /* 1 */
 
 button,
 select { /* 1 */
-  text-transform: none;
+	text-transform: none;
 }
 
 /**
  * 1. Prevent a WebKit bug where (2) destroys native `audio` and `video`
- *    controls in Android 4.
+ *		controls in Android 4.
  * 2. Correct the inability to style clickable types in iOS and Safari.
  */
 
@@ -307,7 +306,7 @@ button,
 html [type="button"], /* 1 */
 [type="reset"],
 [type="submit"] {
-  -webkit-appearance: button; /* 2 */
+	-webkit-appearance: button; /* 2 */
 }
 
 /**
@@ -318,8 +317,8 @@ button::-moz-focus-inner,
 [type="button"]::-moz-focus-inner,
 [type="reset"]::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
-  border-style: none;
-  padding: 0;
+	border-style: none;
+	padding: 0;
 }
 
 /**
@@ -330,7 +329,7 @@ button:-moz-focusring,
 [type="button"]:-moz-focusring,
 [type="reset"]:-moz-focusring,
 [type="submit"]:-moz-focusring {
-  outline: 1px dotted ButtonText;
+	outline: 1px dotted ButtonText;
 }
 
 /**
@@ -338,25 +337,25 @@ button:-moz-focusring,
  */
 
 fieldset {
-  border: 1px solid #b2b2b2;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
+	border: 1px solid #b2b2b2;
+	margin: 0 2px;
+	padding: .35em .625em .75em;
 }
 
 /**
  * 1. Correct the text wrapping in Edge and IE.
  * 2. Correct the color inheritance from `fieldset` elements in IE.
  * 3. Remove the padding so developers are not caught out when they zero out
- *    `fieldset` elements in all browsers.
+ *		`fieldset` elements in all browsers.
  */
 
 legend {
-  box-sizing: border-box; /* 1 */
-  color: inherit; /* 2 */
-  display: table; /* 1 */
-  max-width: 100%; /* 1 */
-  padding: 0; /* 3 */
-  white-space: normal; /* 1 */
+	box-sizing: border-box; /* 1 */
+	color: inherit; /* 2 */
+	display: table; /* 1 */
+	max-width: 100%; /* 1 */
+	padding: 0; /* 3 */
+	white-space: normal; /* 1 */
 }
 
 /**
@@ -364,7 +363,7 @@ legend {
  */
 
 textarea {
-  overflow: auto;
+	overflow: auto;
 }
 
 /**
@@ -374,8 +373,8 @@ textarea {
 
 [type="checkbox"],
 [type="radio"] {
-  box-sizing: border-box; /* 1 */
-  padding: 0; /* 2 */
+	box-sizing: border-box; /* 1 */
+	padding: 0; /* 2 */
 }
 
 /**
@@ -384,7 +383,7 @@ textarea {
 
 [type="number"]::-webkit-inner-spin-button,
 [type="number"]::-webkit-outer-spin-button {
-  height: auto;
+	height: auto;
 }
 
 /**
@@ -393,8 +392,8 @@ textarea {
  */
 
 [type="search"] {
-  -webkit-appearance: textfield; /* 1 */
-  outline-offset: -2px; /* 2 */
+	-webkit-appearance: textfield; /* 1 */
+	outline-offset: -2px; /* 2 */
 }
 
 /**
@@ -403,7 +402,7 @@ textarea {
 
 [type="search"]::-webkit-search-cancel-button,
 [type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
+	-webkit-appearance: none;
 }
 
 /**
@@ -411,8 +410,8 @@ textarea {
  */
 
 ::-webkit-input-placeholder {
-  color: inherit;
-  opacity: 0.54;
+	color: inherit;
+	opacity: .54;
 }
 
 /**
@@ -421,6 +420,6 @@ textarea {
  */
 
 ::-webkit-file-upload-button {
-  -webkit-appearance: button; /* 1 */
-  font: inherit; /* 2 */
+	-webkit-appearance: button; /* 1 */
+	font: inherit; /* 2 */
 }
