--- a/app/sass/layout/_print.scss
+++ b/app/sass/layout/_print.scss
@@ -1,20 +1,20 @@
 /*------------------------------------*\
-	PRINT
+PRINT
 \*------------------------------------*/
 
 @media print {
 	* {
 		background: #fff; /*transparent !important;*/
-		color:#000 !important;
-		box-shadow:none !important;
-		text-shadow:none !important;
+		color: #000 !important;
+		box-shadow: none !important;
+		text-shadow: none !important;
 	}
-	
+
 	.no-print, .no-print *
 	{
 		display: none !important;
 	}
-	
+
 	body, main, article, section {
 		width: 100%;
 		margin: 0;
@@ -22,67 +22,67 @@
 		font-size: 65%;
 		clear: both;
 		float: left;
-	 }
+	}
 
-	 @page {
+	@page {
 		margin: 2cm;
-	 }
-	
+	}
+
 	header, nav, footer {
 		display: none;
-	 }
-	
-	section, article {
-	 	page-break-before: always;
 	}
-	
+
+	section, article {
+		page-break-before: always;
+	}
+
 	ul, img {
 		page-break-inside: avoid;
 	}
-			
+
 	a,
 	a:visited {
 		text-decoration: underline;
 	}
 	a[href]:after {
-		content:" (" attr(href) ")";
+		content: " (" attr(href) ")";
 	}
 	abbr[title]:after {
-		content:" (" attr(title) ")";
+		content: " (" attr(title) ")";
 	}
 	.ir a:after,
 	a[href^="javascript:"]:after,
 	a[href^="#"]:after {
-		content:"";
+		content: "";
 	}
-	pre,blockquote {
-		border:1px solid $gray;
-		page-break-inside:avoid;
+	pre, blockquote {
+		border: 1px solid $gray;
+		page-break-inside: avoid;
 	}
 	thead {
-		display:table-header-group;
+		display: table-header-group;
 	}
-	tr,img {
-		page-break-inside:avoid;
+	tr, img {
+		page-break-inside: avoid;
 	}
 	img {
-		max-width:100% !important;
+		max-width: 100% !important;
 	}
 	@page {
-		margin:0.5cm;
+		margin: .5cm;
 	}
-	
+
 	p,
 	h2,
 	h3 {
-		orphans:3;
-		widows:3;
+		orphans: 3;
+		widows: 3;
 	}
-	
+
 	p,
 	h1,
 	h2,
 	h3 {
-		page-break-after:avoid;
+		page-break-after: avoid;
 	}
 }
