--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -7,7 +7,7 @@ body {
   padding:50px;
   font: 14px/1.5 "Fakt", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
-  font-weight:400;
+  //font-weight:400;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -94,7 +94,7 @@ th, td {
 
 dt {
   color:#444;
-  font-weight:700;
+  //font-weight:700;
 }
 
 th {
@@ -157,7 +157,7 @@ header ul a:active {
 
 strong {
   color:#222;
-  font-weight:700;
+  //font-weight:700;
 }
 
 header ul li + li + li {
