--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -1,21 +1,21 @@
 @font-face {
 	font-family: 'Fakt SmCon';
-	src: url('FaktSmCon-SemiBold.eot');
-	src: url('FaktSmCon-SemiBold.eot?#iefix') format('embedded-opentype'),
-		url('FaktSmCon-SemiBold.woff2') format('woff2'),
-		url('FaktSmCon-SemiBold.woff') format('woff'),
-		url('FaktSmCon-SemiBold.ttf') format('truetype');
+	src: url('../fonts/FaktSmCon-SemiBold.eot');
+	src: url('../fonts/FaktSmCon-SemiBold.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/FaktSmCon-SemiBold.woff2') format('woff2'),
+		url('../fonts/FaktSmCon-SemiBold.woff') format('woff'),
+		url('../fonts/FaktSmCon-SemiBold.ttf') format('truetype');
 	font-weight: 600;
 	font-style: normal;
 }
 
 @font-face {
 	font-family: 'Fakt';
-	src: url('Fakt-Medium.eot');
-	src: url('Fakt-Medium.eot?#iefix') format('embedded-opentype'),
-		url('Fakt-Medium.woff2') format('woff2'),
-		url('Fakt-Medium.woff') format('woff'),
-		url('Fakt-Medium.ttf') format('truetype');
+	src: url('../fonts/Fakt-Medium.eot');
+	src: url('../fonts/Fakt-Medium.eot?#iefix') format('embedded-opentype'),
+		url('../fonts/Fakt-Medium.woff2') format('woff2'),
+		url('../fonts/Fakt-Medium.woff') format('woff'),
+		url('../fonts/Fakt-Medium.ttf') format('truetype');
 	font-weight: 500;
 	font-style: normal;
 }
