Refresh GitHub Pages styling

--- a/github/styles.css
+++ b/github/styles.css
@@ -1,21 +1,21 @@
 @font-face {
-	font-family: 'Fakt SmCon';
-	src: url('../fonts/FaktSmCon-SemiBold.eot');
-	src: url('../fonts/FaktSmCon-SemiBold.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/FaktSmCon-SemiBold.woff2') format('woff2'),
-		url('../fonts/FaktSmCon-SemiBold.woff') format('woff'),
-		url('../fonts/FaktSmCon-SemiBold.ttf') format('truetype');
+	font-family: "Fakt SmCon";
+	src: url("fonts/FaktSmCon-SemiBold.eot");
+	src: url("fonts/FaktSmCon-SemiBold.eot?#iefix") format("embedded-opentype"),
+		url("fonts/FaktSmCon-SemiBold.woff2") format("woff2"),
+		url("fonts/FaktSmCon-SemiBold.woff") format("woff"),
+		url("fonts/FaktSmCon-SemiBold.ttf") format("truetype");
 	font-weight: 600;
 	font-style: normal;
 }
 
 @font-face {
-	font-family: 'Fakt';
-	src: url('../fonts/Fakt-Medium.eot');
-	src: url('../fonts/Fakt-Medium.eot?#iefix') format('embedded-opentype'),
-		url('../fonts/Fakt-Medium.woff2') format('woff2'),
-		url('../fonts/Fakt-Medium.woff') format('woff'),
-		url('../fonts/Fakt-Medium.ttf') format('truetype');
+	font-family: "Fakt";
+	src: url("fonts/Fakt-Medium.eot");
+	src: url("fonts/Fakt-Medium.eot?#iefix") format("embedded-opentype"),
+		url("fonts/Fakt-Medium.woff2") format("woff2"),
+		url("fonts/Fakt-Medium.woff") format("woff"),
+		url("fonts/Fakt-Medium.ttf") format("truetype");
 	font-weight: 500;
 	font-style: normal;
 }
@@ -25,12 +25,13 @@ body {
   padding:50px;
   font: 14px/1.5 "Fakt", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color:#727272;
-  font-weight:400;
+  /* font-weight:400; */
 }
 
 h1, h2, h3, h4, h5, h6 {
   color:#222;
   margin:0 0 20px;
+  font-family: "Fakt SmCon" !important;
 }
 
 p, ul, ol, table, pre, dl {
@@ -39,7 +40,6 @@ p, ul, ol, table, pre, dl {
 
 h1, h2, h3 {
   line-height:1.1;
-	font-family: "Fakt SmCon";
 }
 
 h1 {
@@ -113,7 +113,7 @@ th, td {
 
 dt {
   color:#444;
-  font-weight:700;
+  /* font-weight:700; */
 }
 
 th {
@@ -176,7 +176,7 @@ header ul a:active {
 
 strong {
   color:#222;
-  font-weight:700;
+  /* font-weight:700; */
 }
 
 header ul li + li + li {
